[package]
name = "nav_lights"
version = "0.1.0"
authors = ["Jason Kleban <jkleban@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.10.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32c3"] }
ws2812-spi = "0.4.0"
smart-leds = "0.3.0"
bno055 = "0.3.3"
